--- a/wypozyczalnia/src/main/resources/fxml/StartScreen.fxml
+++ b/wypozyczalnia/src/main/resources/fxml/StartScreen.fxml
@@ -41,7 +41,7 @@
                   <Insets left="200.0" />
                </StackPane.margin>
             </Button>
-            <Button fx:id="punkty" mnemonicParsing="false" prefHeight="52.0" prefWidth="151.0" text="PUNKTY WYP." StackPane.alignment="CENTER_RIGHT">
+            <Button fx:id="punkty" mnemonicParsing="false" onAction="#showRentalPointMenu" prefHeight="52.0" prefWidth="151.0" text="PUNKTY WYP." StackPane.alignment="CENTER_RIGHT">
                <StackPane.margin>
                   <Insets right="50.0" />
                </StackPane.margin>
